...
                                </textAttributes>
                                <items>
                                    <navigationItem title="Wikionary" id="R0T-Gh-BT8">
                                        <barButtonItem key="rightBarButtonItem" image="home" id="owv-0q-K9G">
                                            <color key="tintColor" red="0.43529411759999997" green="0.4431372549" blue="0.47450980390000003" alpha="1" colorSpace="calibratedRGB"/>
                                            <connections>
...
                        </constraints>
                    </view>
                    <tabBarItem key="tabBarItem" title="Wiki" image="web" id="pOb-WR-aFF"/>
                    <connections>
                        <outlet property="webView" destination="PH1-R1-Glv" id="ScT-QK-8Pg"/>
...
                                <textInputTraits key="textInputTraits"/>
                                <scopeButtonTitles>
                                    <string>Definition</string>
                                    <string>Example</string>
                                </scopeButtonTitles>
                                <connections>
...
                                                    </connections>
                                                </switch>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Automatically add word to history" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GLa-76-1wO">
                                                    <rect key="frame" x="18" y="11" width="255.5" height="21"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Set question number to 20" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YrD-wp-VDV">
                                                    <rect key="frame" x="18" y="11" width="204" height="21"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pop up keyboard automatically" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="o3e-Iz-K8S">
                                                    <rect key="frame" x="18" y="11" width="236" height="21"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="About this app" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6wF-pF-JkL">
                                                    <rect key="frame" x="18" y="11" width="112" height="21"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Setting" id="jCz-Oy-qc2"/>
                    <connections>
                        <outlet property="autoAddingSwitch" destination="L4r-rH-yIk" id="PzO-t6-P6Y"/>
...
                                </textAttributes>
                                <items>
                                    <navigationItem title="Vocabulary Test" id="Kgv-gb-Qzk">
                                        <barButtonItem key="rightBarButtonItem" title="Generate Test" style="done" id="O9T-EO-l5V">
                                            <color key="tintColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                            <connections>
...
