...
        
    }
    
    override func tableView(_ tableView: UITableView, didSelectRowAt indexPath: IndexPath) {
        let about = "The TFHpple html parser was Created by Geoffrey Grosenbach\n\n The DLRadioButton was created by Davyd Liu\n\nNote:\nBecause of the xcode bug, the email feature only works in real device, not simulator"
        if (indexPath as NSIndexPath).section == 2 && (indexPath as NSIndexPath).row == 1{
            let alertController = UIAlertController(title: "Resources Reference", message: about, preferredStyle: UIAlertControllerStyle.alert)
            alertController.addAction(UIAlertAction(title:"OK", style: UIAlertActionStyle.default, handler:nil))
            self.present(alertController, animated: true, completion: nil)
        }
    }
    
    @IBAction func autoAddingButton(_ sender: AnyObject) {
        
...
