//
//  FinalProjectUITests.swift
//  FinalProjectUITests
//
//  Created by Charles Augustine on 11/4/15.
//
//

import XCTest

class FinalProjectUITests: XCTestCase {
        
    override func setUp() {
        super.setUp()
        
        // Put setup code here. This method is called before the invocation of each test method in the class.
        
        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false
        // UI tests must launch the application that they test. Doing this in setup will make sure it happens for each test method.
        XCUIApplication().launch()

        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
    }
    
    override func tearDown() {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
        super.tearDown()
    }
    
    func testExample() {
        
        let app = XCUIApplication()
        app.buttons["Example"].tap()
        app.buttons["Definition"].tap()
        
        let tabBarsQuery = app.tabBars
        tabBarsQuery.buttons["Wiki"].tap()
        app.navigationBars["Wikionary"].buttons["home"].tap()
        tabBarsQuery.buttons["Vocabulary Test"].tap()
        app.navigationBars["Vocabulary Test"].buttons["Generate Test"].tap()
        tabBarsQuery.buttons["Setting"].tap()
        
        let tablesQuery = app.tables
        let automaticallyAddWordToHistorySwitch = tablesQuery.switches["Automatically add word to history"]
        automaticallyAddWordToHistorySwitch.tap()
        automaticallyAddWordToHistorySwitch.tap()
        
        let setQuestionNumberTo20Switch = tablesQuery.switches["Set question number to 20"]
        setQuestionNumberTo20Switch.tap()
        setQuestionNumberTo20Switch.tap()
        
        let popUpKeyboardAutomaticallySwitch = tablesQuery.switches["Pop up keyboard automatically"]
        popUpKeyboardAutomaticallySwitch.tap()
        popUpKeyboardAutomaticallySwitch.tap()
        tablesQuery.staticTexts["About this app"].tap()
        app.alerts["Resources Reference"].collectionViews.buttons["OK"].tap()
        
        
    }
    
}
